Now dead players respawn when preparing the next wave.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -962,7 +962,7 @@ BP_PlayerPawn_C.TransformCommon=True
 BP_PlayerPawn_C.Animation=True
 BP_PlayerPawn_C.Mesh=True
 BP_PlayerPawn_C.Clothing=True
-BP_PlayerPawn_C.Physics=False
+BP_PlayerPawn_C.Physics=True
 BP_PlayerPawn_C.MasterPoseComponent=True
 BP_PlayerPawn_C.Collision=True
 BP_PlayerPawn_C.Lighting=True
@@ -3879,9 +3879,23 @@ RectLight.RayTracing=True
 RectLight.Tags=True
 RectLight.Cooking=True
 RectLight.Actor=True
+REINST_BP_PlayerPawn_C_43.Character Movement (General Settings)=True
+REINST_BP_PlayerPawn_C_43.Character Movement: Walking=True
+REINST_BP_PlayerPawn_C_43.Character Movement (Networking)=True
+REINST_BP_PlayerPawn_C_43.Character Movement: Swimming=True
+REINST_BP_PlayerPawn_C_43.Character Movement: Flying=True
+REINST_BP_PlayerPawn_C_43.Character Movement: Custom Movement=True
+REINST_BP_PlayerPawn_C_43.Character Movement: Physics Interaction=True
+REINST_BP_PlayerPawn_C_47.Character Movement (General Settings)=True
+REINST_BP_PlayerPawn_C_47.Character Movement: Walking=True
+REINST_BP_PlayerPawn_C_47.Character Movement (Networking)=True
+REINST_BP_PlayerPawn_C_47.Character Movement: Swimming=True
+REINST_BP_PlayerPawn_C_47.Character Movement: Flying=True
+REINST_BP_PlayerPawn_C_47.Character Movement: Custom Movement=True
+REINST_BP_PlayerPawn_C_47.Character Movement: Physics Interaction=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3967,8 +3981,8 @@ Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
 MRUItem0=/Game/Level/maps/Blockout_P
-MRUItem1=/Game/Level/maps/Wimbledon
-MRUItem2=/Game/Level/maps/VoidMap
+MRUItem1=/Game/Level/maps/VoidMap
+MRUItem2=/Game/Level/maps/Wimbledon
 MRUItem3=/Game/maps/VoidMap
 
 [DetailCustomWidgetExpansion]
@@ -4062,6 +4076,7 @@ StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 Pawn=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 PlayerState=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+BlendSpace=BlendSpace.BlendSamples.GroupName,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -4111,7 +4126,7 @@ REINST_BP_PlayerPawn_C_32="\"Object.Character.Mesh.Object.Collision.BodyInstance
 PainCausingVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 BP_ExplosiveBarrel_C=
@@ -4196,8 +4211,11 @@ GeomModifier="\"Object.Settings\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+REINST_BP_PlayerPawn_C_47="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
+RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
@@ -4210,8 +4228,6 @@ RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBo
 RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
 RecentlyPlaced=/Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy;
-RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
-RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
 RecentlyPlaced=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup;
@@ -4221,25 +4237,25 @@ RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryB
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Level/maps/Blockout_P
-MRUItem1=/Game/Level/maps/Wimbledon
-MRUItem2=/Game/Level/maps/VoidMap
-MRUItem3=/Game/Level/Materials/MI_BlockoutSimple_Inst
-MRUItem4=/Game/Level/Materials/M_BlockoutSimple
-MRUItem5=/Game/Level/Materials/M_BasicBox
-MRUItem6=/Game/Level/Materials/MF_WorldUVs
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem9=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem10=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
-MRUItem11=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
-MRUItem12=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
-MRUItem13=/Game/Blueprints/GameModes/NewBlueprint
-MRUItem14=/Game/UI/WBP_AmmoInfo
-MRUItem15=/Game/Blueprints/Weapons/BP_Rifle
-MRUItem16=/Game/Powerups/Pickup/BP_WeaponPickup
-MRUItem17=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem18=/Game/Powerups/Pickup/BP_PowerupPickup
-MRUItem19=/Game/Powerups/BP_HealthRegenerationPowerup2
+MRUItem1=/Game/Level/maps/VoidMap
+MRUItem2=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem3=/Game/Weapons/SK_Rifle
+MRUItem4=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
+MRUItem5=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem8=/Game/Level/maps/Wimbledon
+MRUItem9=/Game/Level/Materials/MI_BlockoutSimple_Inst
+MRUItem10=/Game/Level/Materials/M_BlockoutSimple
+MRUItem11=/Game/Level/Materials/M_BasicBox
+MRUItem12=/Game/Level/Materials/MF_WorldUVs
+MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem14=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem15=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem16=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem17=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem18=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem19=/Game/Blueprints/GameModes/NewBlueprint
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4316,6 +4332,7 @@ MRUItem19=/Game/Powerups/BP_HealthRegenerationPowerup2
 /Game/Level/Materials/M_BasicBox.M_BasicBox=0
 /Game/Level/Materials/MF_WorldUVs.MF_WorldUVs=0
 /Game/Level/maps/Blockout_P_BuiltData.Blockout_P_BuiltData=0
+/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip.Crouch_Walk_Bwd_Rifle_Hip=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
