GameMode's blueprint logic should be moved to C++. Will be done at the course's end.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -22,11 +22,14 @@ bIsMaterialQualityOverridePlatform=False
 [/Script/UnrealEd.LevelEditorPlaySettings]
 MultipleInstanceLastHeight=400
 MultipleInstanceLastWidth=600
-MultipleInstancePositions=(X=315,Y=163)
+MultipleInstancePositions=(X=655,Y=323)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNetDedicated=True
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -46,10 +49,10 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/Blockout_P
+LastLevel=/Game/Level/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.02-21.08.22
+CoopGame.TimeStamp=2020.05.03-22.41.33
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3897,6 +3900,8 @@ REINST_BP_PlayerPawn_C_47.Character Movement: Physics Interaction=True
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
+OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3929,7 +3934,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Level/maps
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -4236,22 +4241,22 @@ RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerSt
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/Blockout_P
-MRUItem1=/Game/Level/maps/VoidMap
-MRUItem2=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem3=/Game/Weapons/SK_Rifle
-MRUItem4=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
-MRUItem5=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem6=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem7=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem8=/Game/Level/maps/Wimbledon
-MRUItem9=/Game/Level/Materials/MI_BlockoutSimple_Inst
-MRUItem10=/Game/Level/Materials/M_BlockoutSimple
-MRUItem11=/Game/Level/Materials/M_BasicBox
-MRUItem12=/Game/Level/Materials/MF_WorldUVs
-MRUItem13=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem14=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem15=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem0=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem2=/Game/Level/maps/Blockout_P
+MRUItem3=/Game/Level/maps/VoidMap
+MRUItem4=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem5=/Game/Weapons/SK_Rifle
+MRUItem6=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
+MRUItem7=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem10=/Game/Level/maps/Wimbledon
+MRUItem11=/Game/Level/Materials/MI_BlockoutSimple_Inst
+MRUItem12=/Game/Level/Materials/M_BlockoutSimple
+MRUItem13=/Game/Level/Materials/M_BasicBox
+MRUItem14=/Game/Level/Materials/MF_WorldUVs
+MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
 MRUItem16=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
 MRUItem17=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
 MRUItem18=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
