Aligned geometry on Wimbledon map.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,9 +27,6 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
-PlayNetDedicated=True
-PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -49,7 +46,7 @@ CurrentPosGridSize=4
 GridEnabled=False
 
 [EditorStartup]
-LastLevel=/Game/Level/maps/VoidMap
+LastLevel=/Game/Level/maps/Wimbledon
 
 [ModuleFileTracking]
 CoopGame.TimeStamp=2020.05.03-22.41.33
@@ -3900,8 +3897,6 @@ REINST_BP_PlayerPawn_C_47.Character Movement: Physics Interaction=True
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameMode.BP_TestGameMode
-OpenAssetsAtExit=/Game/Blueprints/GameModes/BP_TestGameState.BP_TestGameState
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3934,7 +3929,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Level/Materials
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3985,9 +3980,9 @@ Level=../../../../../../unreal projects/TomLooman/UE4_MasteryCourse_CoopGame/Coo
 Project=C:/Program Files/Epic Games/UE_4.22/
 
 [MRU]
-MRUItem0=/Game/Level/maps/Blockout_P
-MRUItem1=/Game/Level/maps/VoidMap
-MRUItem2=/Game/Level/maps/Wimbledon
+MRUItem0=/Game/Level/maps/Wimbledon
+MRUItem1=/Game/Level/maps/Blockout_P
+MRUItem2=/Game/Level/maps/VoidMap
 MRUItem3=/Game/maps/VoidMap
 
 [DetailCustomWidgetExpansion]
@@ -4219,6 +4214,8 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 REINST_BP_PlayerPawn_C_47="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFactorySphereReflectionCapture_0
+RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_WeaponPickup.BP_WeaponPickup;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_PowerupPickup.BP_PowerupPickup;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -4237,21 +4234,19 @@ RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
 RecentlyPlaced=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup;
 RecentlyPlaced=/Game/Blueprints/AI/BP_TrackerBot.BP_TrackerBot;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem1=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem2=/Game/Level/maps/Blockout_P
-MRUItem3=/Game/Level/maps/VoidMap
-MRUItem4=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem5=/Game/Weapons/SK_Rifle
-MRUItem6=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
-MRUItem7=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem8=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem9=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem10=/Game/Level/maps/Wimbledon
+MRUItem0=/Game/Level/maps/Wimbledon
+MRUItem1=/Game/Level/maps/Blockout_P
+MRUItem2=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem3=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem4=/Game/Level/maps/VoidMap
+MRUItem5=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem6=/Game/Weapons/SK_Rifle
+MRUItem7=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
+MRUItem8=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem9=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
+MRUItem10=/Game/Blueprints/Characters/BP_PlayerPawn
 MRUItem11=/Game/Level/Materials/MI_BlockoutSimple_Inst
 MRUItem12=/Game/Level/Materials/M_BlockoutSimple
 MRUItem13=/Game/Level/Materials/M_BasicBox
