--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -4130,11 +4130,22 @@ BTTask_MoveTo.Description=True
 BlackboardData.Parent=True
 BlackboardData.Key=True
 BP_AIPlayer_C.ComponentTick=True
+EnvironmentQueryGraphNode_Root.Debug=True
+EnvQueryGenerator_Donut.Generator=True
+EnvQueryGenerator_Donut.Option=True
+EnvQueryTest_Trace.Test=True
+EnvQueryTest_Trace.Trace=True
+EnvQueryTest_Trace.Filter=True
+EnvQueryTest_Trace.Score=True
+EnvQueryTest_Trace.Preview=True
+EditorKeyboardShortcutSettings.BTEditor.Blackboard=True
+EditorKeyboardShortcutSettings.BTEditor.Common=True
+EditorKeyboardShortcutSettings.BTEditor.Debugger=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer
+OpenAssetsAtExit=/Game/AdvancedAI/EQS_CoverFindign.EQS_CoverFindign
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -4325,8 +4336,8 @@ InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 Object=
 BP_PlayerPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Pawn="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_BP_PlayerPawn_C_34="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -4446,7 +4457,7 @@ EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSl
 EnvQueryGenerator_SimpleGrid="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator_ProjectedPoints="\"Object.Generator.ProjectionData\" "
 EnvQueryGenerator="\"Object.Generator.ProjectionData\" "
-EnvQueryNode="\"Object.Generator.ProjectionData\" "
+EnvQueryNode=
 GeomModifier_Pen="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
@@ -4467,11 +4478,13 @@ REINST_BP_AIPlayer_C_129="\"Object.Components.camera.Object.PostProcess.PostProc
 REINST_BP_AIPlayer_C_133="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BehaviorTreeGraphNode_Root="\"Object.AI.AI|BehaviorTree\" "
 BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
-AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
-EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
+AIGraphNode=
+EdGraphNode=
 BlackboardData="\"Object.Blackboard\" "
+EnvQueryGenerator_Donut="\"Object.Generator.ProjectionData\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/GameModes/BP_EQSTestingPawn.BP_EQSTestingPawn;
 RecentlyPlaced=/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer;
 RecentlyPlaced=/Game/AdvancedAI/BP_AI.BP_AI;
 RecentlyPlaced=/Game/Blueprints/Animations/BP_CharacterAnimation.BP_CharacterAnimation;
@@ -4491,29 +4504,28 @@ RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Game/Blueprints/Characters/BP_PlayerPawn.BP_PlayerPawn;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AdvancedAI/BP_AIPlayer
-MRUItem1=/Game/AdvancedAI/BT_AIPlayer
-MRUItem2=/Game/AdvancedAI/BB_AIPlayer
-MRUItem3=/Game/AdvancedAI/BP_AI
-MRUItem4=/Game/Blueprints/Animations/BP_CharacterAnimation
-MRUItem5=/Game/Level/maps/TestMap
-MRUItem6=/Game/Level/maps/VoidMap
-MRUItem7=/Game/Level/maps/Wimbledon
-MRUItem8=/Game/Level/maps/Blockout_P
-MRUItem9=/Game/Blueprints/GameModes/BP_TestGameState
-MRUItem10=/Game/Blueprints/GameModes/BP_TestGameMode
-MRUItem11=/Game/Weapons/SK_Rifle_Skeleton
-MRUItem12=/Game/Weapons/SK_Rifle
-MRUItem13=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
-MRUItem14=/Game/AnimStarterPack/BS_CrouchWalk
-MRUItem15=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
-MRUItem16=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem17=/Game/Level/Materials/MI_BlockoutSimple_Inst
-MRUItem18=/Game/Level/Materials/M_BlockoutSimple
-MRUItem19=/Game/Level/Materials/M_BasicBox
+MRUItem0=/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns
+MRUItem1=/Game/Blueprints/GameModes/EQS_FindSpawnLocation
+MRUItem2=/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers
+MRUItem3=/Game/AdvancedAI/EQS_CoverFindign
+MRUItem4=/Game/AdvancedAI/BP_AIPlayer
+MRUItem5=/Game/AdvancedAI/BT_AIPlayer
+MRUItem6=/Game/AdvancedAI/BB_AIPlayer
+MRUItem7=/Game/AdvancedAI/BP_AI
+MRUItem8=/Game/Blueprints/Animations/BP_CharacterAnimation
+MRUItem9=/Game/Level/maps/TestMap
+MRUItem10=/Game/Level/maps/VoidMap
+MRUItem11=/Game/Level/maps/Wimbledon
+MRUItem12=/Game/Level/maps/Blockout_P
+MRUItem13=/Game/Blueprints/GameModes/BP_TestGameState
+MRUItem14=/Game/Blueprints/GameModes/BP_TestGameMode
+MRUItem15=/Game/Weapons/SK_Rifle_Skeleton
+MRUItem16=/Game/Weapons/SK_Rifle
+MRUItem17=/Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip
+MRUItem18=/Game/AnimStarterPack/BS_CrouchWalk
+MRUItem19=/Game/AnimStarterPack/UE4_Mannequin/Mesh/UE4_Mannequin_Skeleton
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -4593,6 +4605,10 @@ MRUItem19=/Game/Level/Materials/M_BasicBox
 /Game/AnimStarterPack/Crouch_Walk_Bwd_Rifle_Hip.Crouch_Walk_Bwd_Rifle_Hip=0
 /Game/AdvancedAI/BT_AIPlayer.BT_AIPlayer=0
 /Game/AdvancedAI/BB_AIPlayer.BB_AIPlayer=0
+/Game/Blueprints/GameModes/EQS_FindSpawnLocation.EQS_FindSpawnLocation=0
+/Game/Blueprints/GameModes/EnvQueryContext_BotSpawns.EnvQueryContext_BotSpawns=0
+/Game/Blueprints/GameModes/EnvQueryContext_FindAllPlayers.EnvQueryContext_FindAllPlayers=0
+/Game/AdvancedAI/BP_AIPlayer.BP_AIPlayer=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
